--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,30 @@
-name: Migrate Database (eAssist API)
+name: Deploy eAssist API
 
 on:
   push:
-    branches: [ "releases" ]
+    branches: [ "main", "releases" ]
   workflow_dispatch:
 
 permissions:
   contents: read
 
 concurrency:
-  group: migrate-production
+  group: production-deploy
   cancel-in-progress: false
 
 jobs:
-  migrate:
-    name: Run migrations remotely
+  no-op:
+    name: No-Op (Not on releases branch)
     runs-on: ubuntu-latest
+    if: ${{ github.ref != 'refs/heads/releases' }}
+    steps:
+      - name: Report success
+        run: echo "Deployment runs only on the 'releases' branch. This is a no-op success."
+
+  deploy:
+    name: Deploy and Restart API
+    runs-on: ubuntu-latest
+    needs: no-op
     if: ${{ github.ref == 'refs/heads/releases' }}
     env:
       DEPLOY_PATH: /opt/eassist-api
@@ -35,125 +44,96 @@ jobs:
           if [ -z "${{ secrets.EASSIST_API_SRV }}" ]; then
             echo '::error::Missing required secret: EASSIST_API_SRV' >&2; exit 1;
           fi
-          if [ ! -f scripts/run-migrations.js ]; then
-            echo '::error::scripts/run-migrations.js not found' >&2; exit 1;
-          fi
-          if [ ! -d scripts/migrations ]; then
-            echo '::error::scripts/migrations directory missing' >&2; exit 1;
-          fi
           echo 'Prerequisites OK.'
+
+      - name: Setup SSH Agent
+        run: |
+          set -euo pipefail
+          eval "$(ssh-agent -s)"
+          echo "${{ secrets.EASSIST_API_SRV }}" | ssh-add -
+          mkdir -p ~/.ssh
+          if [ -n "${{ secrets.DEPLOY_HOST_KNOWN_HOSTS || '' }}" ]; then
+            echo "${{ secrets.DEPLOY_HOST_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
+          else
+            ssh-keyscan -p "$DEPLOY_PORT" -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts 2>/dev/null || true
+          fi
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Install rsync
         run: sudo apt-get update -y && sudo apt-get install -y rsync
 
-      - name: Setup SSH
-        run: |
-          set -euo pipefail
-          mkdir -p ~/.ssh
-          printf '%s' "${{ secrets.EASSIST_API_SRV }}" > ~/.ssh/id_migrate
-          chmod 600 ~/.ssh/id_migrate
-          eval "$(ssh-agent -s)" >/dev/null
-          ssh-add ~/.ssh/id_migrate
-          if [ -n "${{ secrets.DEPLOY_HOST_KNOWN_HOSTS || '' }}" ]; then
-            echo "${{ secrets.DEPLOY_HOST_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
-          else
-            ssh-keyscan -p "$DEPLOY_PORT" -H "$DEPLOY_HOST" > ~/.ssh/known_hosts 2>/dev/null || true
-          fi
-          chmod 644 ~/.ssh/known_hosts
-
-      - name: Sync migration assets
+      - name: Sync project files to server
         run: |
           set -euo pipefail
           RSYNC_RSH="ssh -p ${DEPLOY_PORT} -o StrictHostKeyChecking=yes"
-          rsync -az \
-            --include='scripts/' \
-            --include='scripts/migrations/' \
-            --include='scripts/migrations/**' \
-            --include='scripts/run-migrations.js' \
-            --include='package.json' \
-            --exclude='*' \
+          rsync -az --delete \
+            --exclude='.git' \
+            --exclude='node_modules' \
+            --exclude='.env' \
             -e "$RSYNC_RSH" ./ "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_PATH}/"
 
-      - name: Run migrations remotely
-        id: migrate
+      - name: Remote Deployment Script
+        id: remote_deploy
         continue-on-error: true
         run: |
           set -euo pipefail
           ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" \
-            "DEPLOY_PATH='${DEPLOY_PATH}' bash -s" <<'EOF'
+            "DEPLOY_PATH='${DEPLOY_PATH}' GIT_SHA='${GIT_SHA}' bash -s" <<'EOF'
           set -euo pipefail
-          STATUS_FILE="remote_migrate_status.txt"
-          REASON=""
-          log() { printf "%s\n" "$1"; }
-          fail() { REASON="$1"; log "MIGRATION_FAILURE_REASON: $1"; echo "$REASON" > "$STATUS_FILE"; exit 1; }
-          log "[Remote] Starting migrations job"
-          log "[Remote] DEPLOY_PATH: $DEPLOY_PATH"
-          [ -d "$DEPLOY_PATH" ] || fail "Deploy path $DEPLOY_PATH missing"
+          STATUS_FILE="remote_deploy_status.txt"
+          fail() { echo "$1" > "$STATUS_FILE"; echo "::error::$1"; exit 1; }
+          log() { echo "[Remote] $1"; }
+
+          log "Starting deployment job"
           cd "$DEPLOY_PATH" || fail "Cannot cd to $DEPLOY_PATH"
-          command -v node >/dev/null || fail "Node.js not on PATH"
-          log "[Remote] Node: $(node -v)"
-          if command -v npm >/dev/null; then log "[Remote] NPM: $(npm -v)"; else log "[Remote] npm not found (continuing)"; fi
-          [ -f scripts/run-migrations.js ] || fail "scripts/run-migrations.js missing"
-          [ -d scripts/migrations ] || fail "scripts/migrations directory missing"
-          if [ ! -f .env ]; then log "MIGRATION_WARNING: .env missing (DATABASE_URL may be unset)"; fi
-          log "[Remote] Listing migrations:"; ls -1 scripts/migrations || true
-          MIGR_OK=0
-          if node scripts/run-migrations.js; then
-            MIGR_OK=1
-          else
-            log "[Remote] node scripts/run-migrations.js failed; trying npm run migrate:run"
-            if command -v npm >/dev/null && npm run migrate:run 2>/dev/null; then
-              MIGR_OK=1
-            else
-              log "[Remote] migrate:run failed; trying npm run migrate"
-              if command -v npm >/dev/null && npm run migrate 2>/dev/null; then
-                MIGR_OK=1
-              fi
-            fi
+
+          log "Checking for Node.js and npm"
+          command -v node >/dev/null || fail "Node.js not found on PATH"
+          command -v npm >/dev/null || fail "npm not found on PATH"
+          log "Node: $(node -v), npm: $(npm -v)"
+
+          if [ ! -f .env ]; then log "Warning: .env file not found. DB connection may fail."; fi
+
+          log "Installing/updating production dependencies"
+          npm ci --only=production --prefer-offline --no-audit || npm install --only=production
+
+          log "Running database migrations"
+          npm run migrate:run || npm run migrate || log "Warning: Migration script failed or not found."
+
+          log "Restarting the service"
+          RESTARTED=0
+          if command -v systemctl >/dev/null && systemctl list-units --type=service | grep -q "eassist-api"; then
+            systemctl restart eassist-api && RESTARTED=1 && log "Service restarted via systemd."
           fi
-          if [ "$MIGR_OK" -ne 1 ]; then fail "All migration attempts failed"; fi
-          log "[Remote] Migrations completed successfully"
+          if [ "$RESTARTED" -eq 0 ] && [ -x bin/deploy.sh ]; then
+            ./bin/deploy.sh restart && RESTARTED=1 && log "Service restarted via bin/deploy.sh."
+          fi
+          if [ "$RESTARTED" -eq 0 ] && command -v pm2 >/dev/null; then
+            pm2 reload eassist-api || pm2 restart eassist-api && RESTARTED=1 && log "Service restarted via pm2."
+          fi
+          if [ "$RESTARTED" -eq 0 ]; then
+            log "No systemd/pm2/deploy.sh found, trying npm restart script."
+            npm run restart:8080 || fail "All restart methods failed."
+          fi
+
+          log "Deployment script finished successfully"
           echo "OK" > "$STATUS_FILE"
           EOF
 
-      - name: Evaluate migration result
-        id: evaluate
+      - name: Evaluate deployment result
         run: |
           set -euo pipefail
-          # Attempt to read remote status file & reason
-          REMOTE_REASON=""
-          if ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" "test -f '${DEPLOY_PATH}/remote_migrate_status.txt'"; then
-            STATUS_CONTENT=$(ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" "cat '${DEPLOY_PATH}/remote_migrate_status.txt'")
-            echo "Remote status file content: $STATUS_CONTENT"
-            if [ "$STATUS_CONTENT" != "OK" ]; then
-              REMOTE_REASON="$STATUS_CONTENT"
-            fi
-          else
-            echo "No remote status file found (treating as failure if earlier step failed)."
-          fi
-          echo "remote_reason=$REMOTE_REASON" >> "$GITHUB_OUTPUT"
-          if [ "${{ steps.migrate.outcome }}" != "success" ]; then
-            echo "::error::Migration step outcome: ${{ steps.migrate.outcome }}"
-            if [ -n "$REMOTE_REASON" ]; then
-              echo "::error::Failure reason: $REMOTE_REASON"
-            fi
-            # Collect quick diagnostics
-            echo "--- Remote diagnostics (ls, disk, head of run-migrations.js) ---"
-            ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" "set -e; cd '${DEPLOY_PATH}' 2>/dev/null || exit 0; ls -1 scripts/migrations 2>/dev/null | tail -n 10; du -sh . 2>/dev/null || true; head -n 40 scripts/run-migrations.js 2>/dev/null || true" || true
+          if [ "${{ steps.remote_deploy.outcome }}" != "success" ]; then
+            STATUS_CONTENT=$(ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" "cat '${DEPLOY_PATH}/remote_deploy_status.txt'" || echo "Could not read remote status file.")
+            echo "::error::Deployment script failed. Reason: $STATUS_CONTENT"
             exit 1
           fi
+          echo "Deployment successful."
 
       - name: Summary
         run: |
           {
-            if [ "${{ steps.migrate.outcome }}" = "success" ]; then
-              echo 'Migrations run successfully';
-            else
-              echo 'Migrations failed';
-              echo "Outcome: ${{ steps.migrate.outcome }}";
-              echo "Reason: ${{ steps.evaluate.outputs.remote_reason }}";
-            fi
+            echo "Deployment successful";
             echo "Commit: $GIT_SHA";
             echo "Target: ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_PORT} -> ${DEPLOY_PATH}";
-            echo 'Paths synced: scripts/migrations, scripts/run-migrations.js';
           } >> "$GITHUB_STEP_SUMMARY"
