--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,17 +37,14 @@ jobs:
           fi
           echo 'Prerequisites OK.'
 
-      - name: Setup SSH Agent
+      - name: Prepare SSH key & known_hosts
         run: |
           set -euo pipefail
-          eval "$(ssh-agent -s)"
-          echo "${{ secrets.EASSIST_API_SRV }}" | ssh-add -
           mkdir -p ~/.ssh
-          if [ -n "${{ secrets.DEPLOY_HOST_KNOWN_HOSTS || '' }}" ]; then
-            echo "${{ secrets.DEPLOY_HOST_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
-          else
-            ssh-keyscan -p "$DEPLOY_PORT" -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts 2>/dev/null || true
-          fi
+          printf '%s\n' "${{ secrets.EASSIST_API_SRV }}" > ~/.ssh/id_deploy
+          chmod 600 ~/.ssh/id_deploy
+          ssh-keygen -lf ~/.ssh/id_deploy | sed "s/.*/Loaded private key fingerprint: &/"
+          ssh-keyscan -p "$DEPLOY_PORT" -H "$DEPLOY_HOST" > ~/.ssh/known_hosts 2>/dev/null || true
           chmod 644 ~/.ssh/known_hosts
 
       - name: Install rsync
@@ -56,7 +53,7 @@ jobs:
       - name: Sync project files to server
         run: |
           set -euo pipefail
-          RSYNC_RSH="ssh -p ${DEPLOY_PORT} -o StrictHostKeyChecking=yes"
+          RSYNC_RSH="ssh -i ~/.ssh/id_deploy -p ${DEPLOY_PORT} -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes"
           rsync -az --delete \
             --exclude='.git' \
             --exclude='node_modules' \
@@ -68,7 +65,7 @@ jobs:
         continue-on-error: true
         run: |
           set -euo pipefail
-          ssh -p "$DEPLOY_PORT" -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" \
+          ssh -i ~/.ssh/id_deploy -p "$DEPLOY_PORT" -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes "${DEPLOY_USER}@${DEPLOY_HOST}" \
             "DEPLOY_PATH='${DEPLOY_PATH}' GIT_SHA='${GIT_SHA}' bash -s" <<'EOF'
           set -euo pipefail
           STATUS_FILE="remote_deploy_status.txt"
